@@ -9,7 +9,7 @@ if HAVE_SNDFILE
 gigextract_libs = $(SNDFILE_LIBS)
 gigextract_flags = $(SNDFILE_CFLAGS)
 else
-gigextract_libs = $(AUDIOFILE_LIBS)
+gigextract_libs = $(AUDIOFILE_LIBS) -ldl
 gigextract_flags = $(AUDIOFILE_CFLAGS)
 endif
 
@@ -18,7 +18,10 @@ libgiginclude_HEADERS = RIFF.h DLS.h gig.h
 
 lib_LTLIBRARIES = libgig.la
 libgig_la_SOURCES = RIFF.cpp DLS.cpp gig.cpp
-libgig_la_LDFLAGS = -version-info @SHARED_VERSION_INFO@ @SHLIB_VERSION_ARG@
+libgig_la_LDFLAGS = -no-undefined -version-info @SHARED_VERSION_INFO@ @SHLIB_VERSION_ARG@
+if WIN32
+libgig_la_LIBADD = -lrpcrt4
+endif
 
 bin_PROGRAMS = rifftree dlsdump gigdump gigextract
 rifftree_SOURCES = rifftree.cpp
@@ -28,7 +31,7 @@ dlsdump_LDADD = $(top_builddir)/src/libgig.la
 gigdump_SOURCES = gigdump.cpp
 gigdump_LDADD = $(top_builddir)/src/libgig.la
 gigextract_SOURCES = gigextract.cpp
-gigextract_LDADD = $(top_builddir)/src/libgig.la $(gigextract_libs) -ldl
+gigextract_LDADD = $(top_builddir)/src/libgig.la $(gigextract_libs)
 gigextract_CFLAGS = $(gigextract_flags)
 gigextract_CXXFLAGS = $(gigextract_flags)
 
