@@ -28,6 +28,12 @@
 #include <string>
 #include <sstream>
 
+#if defined(WIN32) && !HAVE_CONFIG_H
+# include "../win32/libgig_private.h" // like config.h, automatically generated by Dev-C++
+# define PACKAGE "libgig"
+# define VERSION VER_STRING // VER_STRING defined in libgig_private.h
+#endif // WIN32
+
 #include "RIFF.h"
 
 // *************** Helper Functions **************
